services/rer-core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ofg-$ENV-$FACING-rer-core
  annotations:
    linkerd.io/inject: enabled
  labels:
    istio-injection: disabled
    appmesh.k8s.aws/sidecarInjectorWebhook: disabled
