services/rer-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rer-core-services
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "ofg-$ENV-$FACING-sub-apps"
spec:
  loadBalancerIP: 10.13.3.60
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: rer-core-services
